# mev-zerocopy-node

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: zero_copy_bench.rs
scripts/: docker-entrypoint.sh  gen_traffic.py  run_bench.sh  run_perf_flamegraph.sh  run_tcpreplay.sh  run_tcpreplay_veth.sh  setup_tap.sh  setup_veth_xdp.sh  traffic-entrypoint.sh
src/: affinity.rs  lib.rs  main.rs  payload.rs  processor.rs  ring.rs  runtime.rs  validator.rs  xdp.rs
